--- a/inventario.html
+++ b/inventario.html
@@ -65,6 +65,7 @@
 <body>
     <div class="container">
         <h2>Inventario de Almacén</h2>
+        <td><button class="btn">Añadir</button>
         <table>
             <thead>
                 <tr>
