--- a/login.html
+++ b/login.html
@@ -11,17 +11,18 @@
         <h2>Almacén SENA</h2>
         <form>
             <div class="input-group">
-                <label for="username">Usuario</label>
-                <input type="text" id="username" name="username" required>
+                <label for="username">👤 Usuario</label>
+                <input type="text" id="username" name="username" placeholder="Escriba Usuario" required>
             </div>
             <div class="input-group">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" required>
+                <label for="password">🔑 Contraseña</label>
+                <input type="password" id="password" name="password" placeholder="Escriba Contraseña" required>
             </div>
             <button type="submit" class="btn-login">Ingresar</button>
         </form>
     </div>
 
     <img src="/Img/LOGOSENA-removebg-preview.png" alt="Logo">
+
 </body>
 </html>
