--- a/registro.html
+++ b/registro.html
@@ -39,7 +39,7 @@
             </select>
         </div>
 
-        <button type="submit" class="btn btn-primary w-100">Registrar Instructor</button>
+        <button  style="background-color: green; border-color: green;"  type="submit" class="btn btn-primary w-100">Registrar Instructor</button>
     </form>
 
     <script>
