--- a/login.html
+++ b/login.html
@@ -3,26 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - Almacén SENA</title>
-    <link rel="stylesheet" href="/Css/login.css">
+    <title>Inicio de Sesión</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background: url('https://cloudfront-us-east-1.images.arcpublishing.com/prisaradioco/UGZJZJUJNFCKXGYMB4FGX6WTEE.jpg') no-repeat center center fixed;
+            background-size: cover;
+        }
+        .login-container {
+            background: rgba(0, 165, 49, 0.9);
+            padding: 2rem;
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+            max-width: 400px;
+            margin: auto;
+            margin-top: 10%;
+            border-radius: 15px;
+        }
+        .form-label{
+            color: white;
+        }
+       
+    </style>
 </head>
 <body>
+
     <div class="login-container">
-        <h2>Almacén SENA</h2>
-        <form>
-            <div class="input-group">
-                <label for="username">👤 Usuario</label>
-                <input type="text" id="username" name="username" placeholder="Escriba Usuario" required>
+        <h2 style="color: white;" class="text-center">Iniciar Sesión</h2>
+        <form id="loginForm">
+            <div class="mb-3">
+                <label for="usuario" class="form-label">Usuario:</label>
+                <input style="border-radius: 20px;" type="text" id="cedula" class="form-control" placeholder="Ingrese su usuario" required>
             </div>
-            <div class="input-group">
-                <label for="password">🔑 Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="Escriba Contraseña" required>
+            <div class="mb-3">
+                <label for="password" class="form-label">Contraseña:</label>
+                <input style="border-radius: 20px;" type="password" id="password" class="form-control" placeholder="Ingrese su contraseña" required>
             </div>
-            <button type="submit" class="btn-login">Ingresar</button>
+            <button style="background-color: rgb(196, 41, 41); color:rgb(247, 244, 244); border-color: rgb(196, 41, 41);" type="submit" class="btn btn-primary w-100">Ingresar</button>
         </form>
     </div>
 
-    <img src="/Img/LOGOSENA-removebg-preview.png" alt="Logo">
+    <script>
+        document.getElementById("loginForm").addEventListener("submit", function(event) {
+            event.preventDefault();
+            alert("Inicio de sesión exitoso (Ejemplo, sin backend)");
+        });
+    </script>
 
 </body>
 </html>
