--- a/ajustes.html
+++ b/ajustes.html
@@ -3,21 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ajustes </title>
+    <title>Configuraciones</title>
     <link rel="stylesheet" href="/Css/ajustes.css">
+
 </head>
 <body>
-    <H1>Almacenista</H1>
-    <h2>Este software solo posee un rol (almacenista)</h2>
-
-    <h2>Desde Aqui puede modificar su contraseña</h2>
-<div class="Container">
-    <p>Contraseña Anterior ​🔑​</p>
-    <input type="password" id="contraseña_anterior" name="contraseña_anterior" placeholder="Anterior">
-    <p>Contraseña Nueva ​🔑​</p>
-    <input type="password" id="contraseña_nueva" name="contraseña_nueva" placeholder="Nueva">
-     <button class="botones">Aplicar</button>
-</div>     
-
+    <div class="settings-container">
+        <h1>Configuraciones</h1>
+        <div class="settings">
+            <button>Cambiar Contraseña</button>
+            <button>Añadir Almacenista</button>
+            <button>Aumentar Tamaño de Letra</button>
+            <button>Aplicar Filtro</button>
+        </div>
+    </div>
 </body>
 </html>
