--- a/registro.html
+++ b/registro.html
@@ -4,59 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Instructores</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Css/registro.css">
+
 </head>
-<body class="container mt-4">
+<body>
+    <h2>Registro de Instructor</h2>
+    <form action="insertar.php" method="POST">
+        <label for="nombre">Nombres:</label>
+        <input type="text" id="nombre" name="nombre" placeholder="Inserte Nombres" required><br><br>
 
-    <h2 class="text-center">Registro de Instructores</h2>
+        <label for="apellido">Apellidos:</label>
+        <input type="text" id="apellido" name="apellido" placeholder="Inserte Apellidos"><br><br>
 
-    <form id="registroInstructor" class="mt-3">
-        <div class="mb-3">
-            <label for="cedula" class="form-label">Cédula:</label>
-            <input type="text" id="cedula" class="form-control" placeholder="Ingrese la cédula" required>
-        </div>
+        <label for="correo">Correo Electrónico:</label>
+        <input type="email" id="correo" name="correo" placeholder="Inserte su correo electrónico" required><br><br>
 
-        <div class="mb-3">
-            <label for="nombre" class="form-label">Nombre:</label>
-            <input type="text" id="nombre" class="form-control" placeholder="Ingrese el nombre" required>
-        </div>
+        <label for="telefono">Teléfono:</label>
+        <input type="text" id="telefono" name="telefono" placeholder="Inserte Teléfono" maxlength="15"><br><br>
 
-        <div class="mb-3">
-            <label for="correo" class="form-label">Correo Electrónico:</label>
-            <input type="email" id="correo" class="form-control" placeholder="Ingrese el correo">
-        </div>
+        <label for="ambiente">Ambiente:</label>
+        <input type="text" id="ambiente" name="ambiente" placeholder="Inserte Ambiente" required><br><br>
 
-        <div class="mb-3">
-            <label for="telefono" class="form-label">Teléfono:</label>
-            <input type="text" id="telefono" class="form-control" placeholder="Ingrese el teléfono">
-        </div>
-
-        <div class="mb-3">
-            <label for="estado" class="form-label">Estado:</label>
-            <select id="estado" class="form-select">
-                <option value="Activo">Activo</option>
-                <option value="Inactivo">Inactivo</option>
-            </select>
-        </div>
-
-        <button  style="background-color: green; border-color: green;"  type="submit" class="btn btn-primary w-100">Registrar Instructor</button>
+        <button type="submit" >Guardar</button>
     </form>
-
-    <script>
-        document.getElementById("registroInstructor").addEventListener("submit", function(event) {
-            event.preventDefault();
-            const instructor = {
-                cedula: document.getElementById("cedula").value,
-                nombre: document.getElementById("nombre").value,
-                correo: document.getElementById("correo").value,
-                telefono: document.getElementById("telefono").value,
-                estado: document.getElementById("estado").value
-            };
-
-            console.log("Datos del instructor:", instructor);
-            alert("Instructor registrado correctamente.");
-        });
-    </script>
 
 </body>
 </html>
