Subiendo Mejora misma version

--- a/ajustes.html
+++ b/ajustes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Configuraciones</title>
-    <link rel="stylesheet" href="/Css/ajustes.css">
+    <link rel="stylesheet" href="Css/ajustes.css">
 
 </head>
 <body>
