--- a/registro.html
+++ b/registro.html
@@ -17,7 +17,7 @@
         <input type="text" id="apellido" name="apellido" placeholder="Inserte Apellidos"><br><br>
 
         <label for="correo">Correo Electrónico:</label>
-        <input type="email" id="correo" name="correo" placeholder="Inserte su correo electrónico" required><br><br>
+        <input type="email" id="correo" name="correo" placeholder="Inserte correo electrónico" required><br><br>
 
         <label for="telefono">Teléfono:</label>
         <input type="text" id="telefono" name="telefono" placeholder="Inserte Teléfono" maxlength="15"><br><br>
@@ -25,7 +25,7 @@
         <label for="ambiente">Ambiente:</label>
         <input type="text" id="ambiente" name="ambiente" placeholder="Inserte Ambiente" required><br><br>
 
-        <button type="submit" >Guardar</button>
+        <button type="submit">Guardar</button>
     </form>
 
 </body>
