--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
         <div class="carousel-container">
             <div class="carousel">
-                <img src="/Img/almacen-interior-logistica-entrega-carga_107791-1777.avif" alt="Imagen 1">
-                <img src="/Img/LOGOSENA-removebg-preview.png" alt="Imagen 2">
-                <img src="/Img/pngtree-black-warehouse-free-drawing-image_2292759.jpg" alt="Imagen 3">
-                <img src="/Img/Sena_logoverde.png" alt="Imagen 4">
+                <img src="Img/almacen-interior-logistica-entrega-carga_107791-1777.avif" alt="Imagen 1">
+                <img src="Img/LOGOSENA-removebg-preview.png" alt="Imagen 2">
+                <img src="Img/pngtree-black-warehouse-free-drawing-image_2292759.jpg" alt="Imagen 3">
+                <img src="Img/Sena_logoverde.png" alt="Imagen 4">
             </div>
         </div>
     </div>
