Versión 0.6.0 Grandes mejoras funcionales

--- a/inventario.html
+++ b/inventario.html
@@ -53,13 +53,13 @@
             padding: 10px;
             margin-top: 10px;
             border: none;
-            background-color: #28a745;
+            background-color: #03721d;
             color: white;
             cursor: pointer;
             border-radius: 5px;
             font-size: 16px;
         }
-        .add-btn:hover {
+        .add-btn:hover {    
             background-color: #218838;
         }
         .form-container {
