--- a/prestamos.html
+++ b/prestamos.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Módulo de Préstamos</title>
-    <link rel="stylesheet" href="Css/prestamos.css">
+    <link rel="stylesheet" href="Css/prestamos.css?v=<?php echo time(); ?>">
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            if (localStorage.getItem("modoOscuro") === "enabled") {
+                document.body.classList.add("dark-mode");
+            } else {
+                document.body.classList.remove("dark-mode");
+            }
+        });
+        </script>
+        
     <style>
         
         .prestamo-item {
